--- a/Index.html
+++ b/Index.html
@@ -185,7 +185,7 @@
                     <div class="row align-items-center">
                         <div class="col-xxl-2 col-xl-2 col-lg-6 col-md-6 col-6">
                             <div class=it-header-logo-2>
-                                <a href=index.html><img src="assets/images/_logo__14_-removebg-preview.png" alt=""></a>
+                                <a href=index.html><img src="assets/images/_logo__14_-removebg-preview.png" width="100px" height="100px" alt=""></a>
                             </div>
                             <div class="it-header-logo-red d-none">
                                 <a href=index.html><img src="assets/images/_logo__14_-removebg-preview.png" alt=""></a>
@@ -253,14 +253,7 @@
                         </div>
                         <div class="col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-6">
                             <div class="it-header-right-action d-flex justify-content-end align-items-center">
-                                <div class="it-header-search d-none d-xxl-block">
-                                    <button class=search-box-outer>
-<svg width=24 height=25 viewBox="0 0 18 18" fill=none xmlns="http://www.w3.org/2000/svg">
-<path d="M8.6 16.2C12.7974 16.2 16.2 12.7974 16.2 8.6C16.2 4.40264 12.7974 1 8.6 1C4.40264 1 1 4.40264 1 8.6C1 12.7974 4.40264 16.2 8.6 16.2Z" stroke=currentcolor stroke-width=1.5 stroke-linecap=round stroke-linejoin=round></path>
-<path d="M17.0004 17.0004L15.4004 15.4004" stroke=currentcolor stroke-width=1.5 stroke-linecap=round stroke-linejoin=round></path>
-</svg>
-</button>
-                                </div>
+                               
                                 <a href=about-us-v1.html class="it-btn-orange d-none d-md-flex">
 <span>
 <span class=text-1>discover More</span>
@@ -291,7 +284,7 @@
             </div>
         </div>
     </header>
-    <div id=smooth-wrapper>
+    <div id=smooth-wrapper style="margin-top: 30px;">
         <div id=smooth-content>
             <main>
                 <div class="it-hero-area pt-160 fix gray-bg z-index-1">
@@ -445,7 +438,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/2.jpg" alt="">
+                                            <img class=w-100 src="assets/images/rcc-wall-core-cutting-service.webp" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -472,7 +465,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/3.jpg" alt="">
+                                            <img class=w-100 src="assets/images/And beam (wire saw ) cutting service.png" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -513,7 +506,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/4.jpg" alt="">
+                                            <img class=w-100 src="assets/images/rcc-beam-core-cutting-services.webp" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -540,7 +533,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/5.jpg" alt="">
+                                            <img class=w-100 src="assets/images/concrete-core-cutting-service.webp" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -568,7 +561,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/6.jpg" alt="">
+                                            <img class=w-100 src="assets/images/chimani-core-cutting-4--250x250.webp" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -596,7 +589,7 @@
                                 <div class="it-service-2-item it-img-anim-wrap  mb-35">
                                     <div class="fix p-relative">
                                         <div class="it-service-2-thumb fix it-img-anim" data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                            <img class=w-100 src="assets/images/6.jpg" alt="">
+                                            <img class=w-100 src="assets/images/ac-fitting-core-cutting-service-334.webp" alt="">
                                         </div>
                                         <div class=it-service-2-icon>
                                             <span>
@@ -700,7 +693,7 @@
                                                 <div class=it-project-2-item>
                                                     <div class="it-project-2-thumb fix it-img-anim-wrap p-relative">
                                                         <div class=it-img-anim data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                                            <img class=w-100 src="assets/images/1.jpg" alt="">
+                                                            <img class=w-100 src="assets/images/fastner1.webp" alt="">
                                                         </div>
                                                     </div>
                                                     <div class="it-project-2-content d-flex justify-content-between">
@@ -726,7 +719,7 @@ Fastener fixing (chemical and mechanical) service
                                                 <div class=it-project-2-item>
                                                     <div class="it-project-2-thumb fix it-img-anim-wrap p-relative">
                                                         <div class=it-img-anim data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                                            <img class=w-100 src="assets/images/2.jpg" alt="">
+                                                            <img class=w-100 src="assets/images/mechanical-anchor-fasteners-fixing-services-500x500.webp" alt="">
                                                         </div>
                                                     </div>
                                                     <div class="it-project-2-content d-flex justify-content-between">
@@ -752,7 +745,7 @@ Fastener fixing (chemical and mechanical) service
                                                 <div class=it-project-2-item>
                                                     <div class="it-project-2-thumb fix it-img-anim-wrap p-relative">
                                                         <div class=it-img-anim data-displacement="assets/img/webgl/pattern-1.jpg" data-intensity=0.6 data-speedin=1 data-speedout=1>
-                                                            <img class=w-100 src="assets/images/3.jpg" alt="">
+                                                            <img class=w-100 src="assets/images/rcc-wall-cutting-service.webp" alt="">
                                                         </div>
                                                     </div>
                                                     <div class="it-project-2-content d-flex justify-content-between">
